<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Profile Title -->
    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/profile_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Save Contact Info Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveContactInfo"
        android:layout_width="294dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/save_contact_info"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTitle"
        app:strokeColor="#E0E0E0"
        app:strokeWidth="2dp" />

    <!-- Change Alert Preferences Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangeAlertPreferences"
        android:layout_width="291dp"
        android:layout_height="98dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/change_alert_npreferences"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSaveContactInfo"
        app:strokeColor="#E0E0E0"
        app:strokeWidth="2dp" />

    <!-- Monitor Your Data Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMonitorData"
        android:layout_width="289dp"
        android:layout_height="104dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:text="@string/monitor_your_ndata"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnChangeAlertPreferences"
        app:strokeColor="#E0E0E0"
        app:strokeWidth="2dp" />

    <!-- Register Here Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegisterHere"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@android:color/black"
        android:fontFamily="@font/inter_medium"
        android:text="@string/register_here"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMonitorData" />

    <TextView
        android:id="@+id/termsPolicy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/already_registered"
        android:textColor="#828282"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegisterHere"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Bottom navbar -->
    <include
        android:id="@+id/bottomNavigation"
        layout="@layout/bottom_nav_bar"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>